# Two-Wheel-Robot-DeepRL

./: pyproject.toml  requirements.txt
configs/: main.yaml  tf_sac.yaml
results/test/SAC_distance_30_128hidden/: SAC_distance_30_128hidden.yaml
results/test/SAC_robot_weight_5kg_force/: SAC_robot_weight_5kg_force.yaml
results/train/SAC_robot_weight_5kg_force/: SAC_robot_weight_5kg_force.yaml
src/: robot_environment.py  robot_move.py  robot_sac_tf.py  robot_test.py  robot_train.py
