[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Two-Wheel-Robot-DeepRL"
version = "0.1.0"
description = "Two-Wheel-Robot-DeepRL"
authors = [{name = "Not me look at the parent repo", email = "foo@example.com"}]
dependencies = [
  # These dependencies might not be exactly correct I just set them as needed
  # to comply with my own project requirements.
  "matplotlib==3.7.1",
  "numpy==1.23.5",
  "opencv_python==4.7.0.72",
  "pandas==2.0.0",
  "pybullet==3.2.5",
  "PyYAML==6.0",
  "seaborn==0.12.2",
  "tensorflow[and-cuda]",
  "tensorflow_probability",
  "torch<2.0.0",
]
